Update to GreyBuild 2.0.4 and fix Java 11 warnings