@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2018 Yusef Badri - All rights reserved.
+ * Copyright 2010-2024 Yusef Badri - All rights reserved.
  * NAF is distributed under the terms of the GNU Affero General Public License, Version 3 (AGPLv3).
  */
 package com.grey.base.utils;
@@ -299,9 +299,9 @@ public final class ByteOps
 		Float fval;
 
 		if (base == 0) {
-			fval = new Float(size);
+			fval = Float.valueOf(size);
 		} else {
-			fval = new Float(size / base);
+			fval = Float.valueOf(size / base);
 		}
 		String fstr = String.format("%.3f", fval);
 		int lmt = fstr.length();
